--- a/manifest.json
+++ b/manifest.json
@@ -10,33 +10,10 @@
   ],
   "icons": [
     {
-      "src": "\/android-chrome-32x32.png",
+      "src": "\/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image\/png",
       "density": 0.75
-    },
-    {
-      "src": "\/android-chrome-72x72.png",
-      "sizes": "72x72",
-      "type": "image\/png",
-      "density": 1.5
-    },
-    {
-      "src": "\/android-chrome-144x144.png",
-      "sizes": "144x144",
-      "type": "image\/png",
-      "density": 3
-    },
-    {
-      "src": "\/android-chrome-196x196.png",
-      "sizes": "192x192",
-      "type": "image\/png",
-      "density": 4
-    },
-    {
-      "src": "\/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image\/png"
     }
   ]
 }
