--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   ],
   "icons": [
     {
-      "src": "\/favicon-32x32.png",
+      "src": "public\/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image\/png",
       "density": 0.75
